fix z-index issue again

--- a/style.css
+++ b/style.css
@@ -1,83 +1,13 @@
-body {
-    overflow: hidden;
-    font-family: 'Roboto', serif;
-    background: linear-gradient(135deg, black, #220033);
-    width: 100vw;
-    height: 100vh;
-}
-*{  margin: 0;
-    padding: 0;}
-:root{
-    --width: 280px;
-    --height: 420px;
-    --x: calc(var(--active) * 800%);
-    --y: calc(var(--active) * 200%);
-    --rot: calc(var(--active) * 120deg);
-}
-
-.container{position: absolute; left: 100px; top: 50%; transform: translateY(-50%);}
+*{ margin: 0; padding: 0;} :root{ --width: 280px; --height: 420px; }
+body { overflow: hidden; font-family: 'Roboto', serif; background: linear-gradient(135deg, black, #220033); width: 100vw; height: 100vh; }
+.container{position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);}
 .wrapper{display: flex; justify-content: center; align-items: center;width: 100%; height: 100%;pointer-events: none;}
-
-
-.item{width: var(--width); height: var(--height);box-shadow: 0 10px 50px 10px rgba(0, 0, 0, .5);border-radius: 10px; pointer-events: all;
-/* transform:  translate(var(--x), var(--y)) rotate(var(--rot)) */
-transition: transform .8s cubic-bezier(0, 0.02, 0, 1);
-}
-
- /* .item:nth-child(2){
-    transform: translate(-10px, 105px) rotate(10deg);
-}
-.item:nth-child(3){
-    transform: translate(-20px, 210px) rotate(20deg);
-}
-.item:nth-child(4){
-    transform: translate(-40px, 420px) rotate(30deg);
-}  */
-/* .item.active{z-index: 1;} */
-
-.inner{width: 100%; height: 100%; font-family: 'Orelo-sw-db', serif; position: relative;
-    transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-    opacity: var(--opacity);
-}
-.inner::before{
-    content: '';
-      position: absolute;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, .5));
-}
-.title {
-    position: absolute;
-    z-index: 1;
-    color: #fff;
-    bottom: 20px;
-    left: 20px;
-    transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-    font-size: clamp(20px, 3vw, 30px);
-    text-shadow: 0 4px 4px rgba(0, 0, 0, .1);
-  }
-
-  .num {
-    position: absolute;
-    z-index: 1;
-    color: #fff;
-    top: 10px;
-    left: 20px;
-    transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-    font-size: clamp(20px, 10vw, 80px);
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-    border-radius: 20px;
-  }
-
+.item{width: var(--width); height: var(--height);box-shadow: 0 10px 50px 10px rgba(0, 0, 0, .5);border-radius: 10px; pointer-events: all; transition: transform .8s cubic-bezier(0, 0.02, 0, 1); }
+.inner{width: 100%; height: 100%; font-family: 'Orelo-sw-db', serif; position: relative; transition: opacity .8s cubic-bezier(0, 0.02, 0, 1); opacity: var(--opacity); }
+.inner::before{ content: ''; position: absolute; z-index: 1; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, .5)); }
+.title { position: absolute; z-index: 1; color: #fff; bottom: 20px; left: 20px; transition: opacity .8s cubic-bezier(0, 0.02, 0, 1); font-size: clamp(20px, 3vw, 30px); text-shadow: 0 4px 4px rgba(0, 0, 0, .1); }
+.num { position: absolute; z-index: 1; color: #fff; top: 10px; left: 20px; transition: opacity .8s cubic-bezier(0, 0.02, 0, 1); font-size: clamp(20px, 10vw, 80px); }
+img { width: 100%; height: 100%; object-fit: cover; pointer-events: none; border-radius: 20px; }
 
 
 
